# pychiral

./: CHIRAL.R  EM.py  chiral.py  drosophila.ipynb  helper_fn.py  notebook.ipynb  pyproject.toml  readme.md  script.py
R/: script.R
pyCHIRAL/: EM.py  chiral.py  em.py  helper_fn.py  stat_phys.py
src/pychiral/: __init__.py  chiral.py  helper_fn.py  stat_phys.py
